# rdk-cert-config

./: .gitattributes  CHANGELOG.md  Makefile.am  NOTICE  RDK-61158.md  README.md  configure.ac  cov_build.sh  run_gtest.sh  run_l2.sh  run_l3.sh
.github/: CODEOWNERS
.github/workflows/: L1-Test.yml  L2-tests.yml  L3-tests.yml  native_full_build.yml
CertSelector/: Makefile.am  README.md
CertSelector/conf/: certsel.cfg  hrot.properties
CertSelector/gtest/: Makefile.am  rdkcertlocator_gtest.cpp  rdkcertselector_gtest.cpp
CertSelector/gtest/mock/: mock.cpp  mock.h
CertSelector/gtest/ut/: bad3hrot.properties  fixbufferhrot.properties  long4hrot.properties  tst1certsel.cfg  tst1hrot.properties  tst1miss2.cfg  tst1miss3.cfg  tst1miss4.cfg  tst1miss5.cfg  tst2hrot.properties
CertSelector/gtest/ut/etc/ssl/certsel/: certsel.cfg  hrot.properties
CertSelector/include/: rdkcertlocator.h  rdkcertselector.h
CertSelector/src/: Makefile.am  Makefile.vm  ctmain.c  rdkcertlocator.c  rdkcertselector.c  unit_test.h
RdkConfigApi/include/: rdkconfig.h
RdkConfigApi/src/: GetSaveConfigFile.c  Makefile.am  Makefile.vm  rdkconfig.c  test_rdkconfig.c  unit_test.h
rdkfwupdater/: run_l2.sh
rdkfwupdater/.github/workflows/: L2-tests.yml
rdkfwupdater/test/L2-tests/pkcs11-mtls/: pkcs11_config.sh  test_pkcs11_mtls.sh
setTlsCert/include/: rdkSetTlsCert.h
setTlsCert/src/: Makefile.am  rdksettlscert.c
test/: Makefile.am
test/cert-scripts/: Makefile.am  README.md  cert_utils.sh  create-reference-p12.sh  create_ca.sh  create_leaf_cert.sh  create_reference_p12.c  cross_sign_roots.sh  generate_crl_test_certs.sh  generate_cross_signed_test_certs.sh  generate_test_rdk_certs.sh  generate_xs_crl_and_expired_bridge.sh  install.sh  make_ref_p12.c
test/cert-scripts/tools/: make_ref_p12.c
test/functional-tests/features/: badseq1.feature  dualseq1.feature  sequ12_13_crl.feature  sequ14_15_crl.feature  sequ14_17_ocsp_xsexpiry.feature  sequ16_18_ocsp.feature  sequ1cs.feature  sequ2cs.feature  sequ3cs.feature  sequ4cs.feature  sequ5cs.feature  sequ6cs.feature  sequ9_11_xsign.feature  sequ9_13_xsign.feature
test/functional-tests/tests/: test_certsel_seq.py  test_l3_crl_xsign.py
test/l2-sampleapp/: Makefile.am  certsel_main.c  certsel_seq.c  certsel_xsign.c  test_setup.sh
test/l2-sampleapp/include/: l2_tst.h
test/l3-testapp/: Makefile.am  certsel_l3.c  certsel_l3.h  l3_main.c  test_setup.sh
test/patches/: Makefile.am  pkcs11_migration_support_p12.patch
test/pkcs11-scripts/: Makefile.am  SSA_ECCKDF_L2_L3_SETUP.md  import-certs-to-pkcs11.sh  init-pkcs11-tokens.sh  setup-pkcs11-openssl.sh  setup-pkcs11.sh  softhsm2.conf
